Updating Swagger and API endpoints
